# archer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
archer/: __init__.py  log_setup.py  logging.py  main.py
archer/cli/: __init__.py  utils.py
archer/constants/: __init__.py  cli.py  filesystem.py  http.py  logging.py  messages.py  package.py  security.py  template.py  validation.py
archer/core/: __init__.py  variables.py
archer/exceptions/: __init__.py
archer/models/: __init__.py  validation_output.py
archer/templates/: __init__.py  discovery.py  exceptions.py  loader.py
archer/types/: __init__.py  core.py  http.py  templates.py
archer/utils/: __init__.py  io.py  templates.py
cmd/archer/: doc.go  main.go
examples/: api-key-header.yaml  array-response.yaml  bearer-token.yaml  graphql.yaml  multiple-status-codes.yaml  post-request.yaml  query-param-auth.yaml
internal/cli/: info.go  list.go  root.go  validate.go  validate_test.go
internal/constants/: cli.go  http.go  messages.go  template.go  validation.go  version.go
templates/: airtable.yaml  asana.yaml  circleci.yaml  clickup.yaml  cloudfare.yaml  codacy.yaml  datadog.yaml  digitalocean.yaml  discord.yaml  figma.yaml  ghost.yaml  github.yaml  gitlab.yaml  heroku.yaml  jotform.yaml  linear.yaml  miro.yaml  newrelic.yaml  notion.yaml  npm.yaml  openai.yaml  postman.yaml  redis.yaml  sentry.yaml  slack.yaml  stripe.yaml  supabase.yaml  vercel.yaml
(+37 files in other folders)
